syntax = "proto3";

option go_package = "v1";

option java_package = "stackrox.generated";

import weak "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/common.proto";
import "api/v1/empty.proto";

package v1;

message UserAttribute {
    string key = 1;
    string value = 2;
}

// User is an object that allows us to track the roles a user is tied to, and how they logged in.
message User {
    string id = 1;
    string auth_provider_id = 2;

    repeated UserAttribute attributes = 3;
}

message GetUsersResponse {
    repeated User users = 1;
}

service UserService {

    rpc GetUsers (Empty) returns (GetUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }

    rpc GetUser (ResourceByID) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    }

}
